Fixed near-useless scrollbar on unscrolling pages

--- a/reusable/style.css
+++ b/reusable/style.css
@@ -55,7 +55,7 @@ body {
     justify-content: center;
     position: absolute;
     top: 95px;
-    min-height: 90%;
+    min-height: 89.9%;
     align-content: center;
     z-index: bottom;
     align-items: stretch;
